tests/e2e/chainsaw/fifo-admission/queue.yaml
apiVersion: edp.epam.com/v1alpha1
kind: PipelineRunQueue
metadata:
  name: fifo-queue
spec:
  selector:
    matchLabels:
      test: fifo-admission
  concurrency: 1
  strategy: Queue
