tests/e2e/chainsaw/fifo-admission/assert-queued.yaml
apiVersion: tekton.dev/v1
kind: PipelineRun
metadata:
  name: run-2
spec:
  status: PipelineRunPending
(metadata.annotations."app.edp.epam.com/queue" == null): true
---
apiVersion: tekton.dev/v1
kind: PipelineRun
metadata:
  name: run-3
spec:
  status: PipelineRunPending
(metadata.annotations."app.edp.epam.com/queue" == null): true
